fix shell layout issue in IE

--- a/src/client/src/ui/common/styles/_fonts.scss
+++ b/src/client/src/ui/common/styles/_fonts.scss
@@ -29,7 +29,8 @@ $glyphicons-font-path: '../fonts/bootstrap/glyphicons-halflings-regular';
 
 @font-face {
   font-family: 'Rubik Light';
-  src: url('../fonts/RubikLight.woff2');
+  src: url('../fonts/RubikLight.woff2') format('woff2');
+  src: url('../fonts/RubikLight.ttf') format('truetype');
   font-style: normal;
   font-weight: normal;
 }
